2017-12-19  Toshihiko Kawano  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF8): bug fixed
	* source/decetable8.cpp (DeceTableMF8MT457): bug fixed
	MF8 read/write bug for some cases fixed

2017-09-14  Toshihiko Kawano  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF2): updated
	* source/decetable2.cpp (DeceTableMF2AP): new function
	energy-dependent AP for URR added

2017-08-11  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable6.cpp: updated
	main function divided into small subroutines
	tabulation of Law7 added

	* tools/decemacs.cpp (main): modified
	T9 input allowed as a negative value in the first command line options

2016-12-20  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable14.cpp: new file
	qucik made for tabulating MF14
	LTT =2 case not tested yet

2016-12-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcs1.cpp: updated
	gcc4 hack, cstdlib.h added

	* source/Makefile.am (dece_SOURCES): bug fixed
	add missing file

2016-11-29  Toshihiko Kawano  <kawano@lanl.gov>

	* source/decetable12.cpp (DeceTableMF12): bug fixed
	total photon yield printing part was missing

2016-09-22  Toshihiko Kawano  <kawano@lanl.gov>

	* tools/decemf6.cpp (mf6spec): bug fixed
	special case, when all spectra are zero, add dummy point at the highest energy

2016-10-23  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (DeceRead): modified
	when there is no adding data point, remove temporal section

	* tools/decemf6.cpp (mf6spec): bug fixed
	bug in the zero spectrum case fixed

	* source/deceread.cpp (DeceRead): modified
	* source/endflib.h (ENDFDict): modified
	* source/endflib.cpp (ENDFMF2boundary): modified
	resonance boundary for LSSF=1 case modified
	new variable emaxRe in ENDFDict defined

2016-07-27  Toshihiko Kawano  <kawano@lanl.gov>

	* .gitignore: modified
	some automatically generated files were removed from git tree

2016-05-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: modified