@@ -1,3 +1,9 @@
+2018-01-18  Toshihiko Kawano  <kawano@lanl.gov>
+
+	* source/decetable33.cpp (DeceTableMF33): modified
+	* source/decetable34.cpp (DeceTableMF34): modified
+	energy unit changed from MeV to eV
+
 2017-12-19  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* source/endfio.cpp (ENDFReadMF8): bug fixed
